# finradplusplus

./: .gitattributes  .gitignore  README.md  docker-compose.yml
AdminPanel/: .dockerignore  Dockerfile  entrypoint.sh  requirements.txt
AdminPanel/AdminPanel/: asgi.py  settings.py  urls.py  wsgi.py
AdminPanel/myapp/: admin.py  expression_parser.py  grpc_client.py  models.py  urls.py  views.py
AdminPanel/myapp/management/commands/: run_mock_server.py
AdminPanel/myapp/migrations/: 0001_initial.py  0002_ruleresult.py
AdminPanel/myapp/templates/admin/: rule_result_changelist.html
AdminPanel/rules/: profile_pb2.py  profile_pb2_grpc.py  rule_config_pb2.py  rule_config_pb2_grpc.py
ApiGateWay/: Dockerfile  main.py  mock_grpc_server.py  transaction_pb2.py  transaction_pb2_grpc.py
benchmark/: README.md  send_transaction.py
build_tools/: build_images.sh
build_tools/images/cpp_stack_prebuild/: Dockerfile
build_tools/images/cpp_stack_prebuild/cmakepresets/: CMakePresets.json  toolchain-debug.cmake
build_tools/images/cpp_stack_prebuild/preinstall_conan/protobuf/: conanfile.txt
director_service/: Dockerfile
director_service/.cache/clangd/index/: main.cpp.5024E55A8A3EC168.idx
director_service/configs/: config_vars_template.yaml  secdist.json  static_config.yaml
director_service/src/: CMakeLists.txt  proto-file-generate.cmake
director_service/src/lib/: CMakeLists.txt
director_service/src/lib/director/: CMakeLists.txt  director.cpp  director.hpp
director_service/src/lib/director/director_producer/: CMakeLists.txt  director.cpp  director.hpp  rule_request_producer.cpp  rule_request_producer.hpp
director_service/src/lib/director/profile_receiver/: CMakeLists.txt  profile_receiver.cpp  profile_receiver.hpp
director_service/src/lib/director/rule_request_producer/: CMakeLists.txt  rule_request_producer.cpp  rule_request_producer.hpp
director_service/src/lib/director/transaction_receiver/: CMakeLists.txt  transaction_receiver.cpp  transaction_receiver.hpp
grafana/provisioning/alerting/: alerting.yml  rules.yml
grafana/provisioning/datasources/: datasources.yml
reporter_service/configs/: secdist.json  static_config.yaml
reporter_service/src/: CMakeLists.txt  proto-file-generate.cmake
reporter_service/src/lib/: CMakeLists.txt
reporter_service/src/lib/reporter/: CMakeLists.txt
reporter_service/src/lib/reporter/rule_result_consumer/: CMakeLists.txt  rule_result_consumer.cpp  rule_result_consumer.hpp
rules/threshold_rule_service/: CMakeLists.txt  CMakeUserPresets.json  conanfile.txt
rules/threshold_rule_service/src/lib/: CMakeLists.txt  threshold_validator.cpp  threshold_validator.hpp
rules/threshold_rule_service/src/proto/: transaction.pb.cc  transaction.pb.h
rules/threshold_rule_service/src/proto/rules/: threshold_rule.pb.cc  threshold_rule.pb.h
rules_service/: CMakeLists.txt  Dockerfile  docker-compose.yml  protobuf_generator.cmake
rules_service/.devcontainer/: devcontainer.json
rules_service/configs/: secdist.json  static_config.yaml
rules_service/model_configs/: final_xgb_columns.txt  stage2_xgb_final.xgb  stage2_xgb_final_json.json
rules_service/src/: CMakeLists.txt
rules_service/src/lib/: CMakeLists.txt
rules_service/src/lib/composite_rule/: CMakeLists.txt  composite_rule.cpp  composite_rule.hpp
rules_service/src/lib/ml_model/: CMakeLists.txt  ml_fraud_detector.cpp  ml_fraud_detector.hpp  redis_history_provider.cpp  redis_history_provider.hpp
rules_service/src/lib/ml_rule/: CMakeLists.txt  ml_rule.cpp  ml_rule.hpp
rules_service/src/lib/pattern_rule/: CMakeLists.txt  pattern_rule.cpp  pattern_rule.hpp
rules_service/src/lib/rule_factory/: CMakeLists.txt  rule_factory.cpp  rule_factory.hpp
rules_service/src/lib/rule_interface/: CMakeLists.txt  IRule.hpp
rules_service/src/lib/rule_processor/: CMakeLists.txt  rule_processor.cpp  rule_processor.hpp
rules_service/src/lib/rule_utils/: CMakeLists.txt  expression_evaluator.hpp  kafka_result_producer.cpp  kafka_result_producer.hpp
rules_service/src/lib/service/: CMakeLists.txt
rules_service/src/lib/threshold_rule/: CMakeLists.txt  threshold_rule.cpp  threshold_rule.hpp
rules_service/src/lib/transaction_history/: CMakeLists.txt  transaction_history_service.cpp  transaction_history_service.hpp
rules_service/src/proto_models/: CMakeLists.txt  transaction.pb.cc  transaction.pb.h
rules_service/src/proto_models/rules/: CMakeLists.txt  composite_rule.pb.cc  composite_rule.pb.h  ml_rule.pb.cc  ml_rule.pb.h  pattern_rule.pb.cc  pattern_rule.pb.h  rule_config.pb.cc  rule_config.pb.h  threshold_rule.pb.cc  threshold_rule.pb.h
shared_data_model/src/migrations/: 001_create_table_transaction.sql  002_create_result.sql
shared_data_model/src/proto/requests/: rule_request.proto
shared_data_model/src/proto/responses/: rule_response.proto
shared_data_model/src/proto/rules/: composite_rule.proto  expression.proto  ml_rule.proto  pattern_rule.proto  profile.proto  result_service.proto  rule_config.proto  rule_request.proto  rule_response.proto  rule_result.proto  threshold_rule.proto
shared_data_model/src/proto/transaction/: transaction.proto
webhook_service/: Dockerfile  webhook_server.py
