add_subdirectory(rule_interface)
add_subdirectory(rule_utils)
add_subdirectory(ml_rule)
add_subdirectory(pattern_rule)
add_subdirectory(threshold_rule)
add_subdirectory(transaction_history)
add_subdirectory(ml_model)
add_subdirectory(rule_factory)
add_subdirectory(composite_rule)
add_subdirectory(rule_processor)
